--- a/mails/passwordReset.handlebars
+++ b/mails/passwordReset.handlebars
@@ -3,7 +3,7 @@
       Password Reset
   </div>
 
-  <div class="normal-text">We have received a request to reset your password for your account on Yot Store.<br/> <br/>
+  <div class="normal-text">We have received a request to reset your password for your account on About Rent.<br/> <br/>
       <span style="font-weight: 700;"> To complete the password reset process, please click on the following link:</span>
   </div>
 
