--- a/mails/emailVerification.handlebars
+++ b/mails/emailVerification.handlebars
@@ -3,7 +3,7 @@
       Account Verification
   </div>
 
-  <div class="normal-text">Thank you for signing up for Yot Store. <br/> <br/>
+  <div class="normal-text">Thank you for signing up for About Rent. <br/> <br/>
       <span style="font-weight: 700;">To verify your email address and activate your account, please click the link below:</span></div>
 
   <div class="actions">
