--- a/pdfs/invoice.handlebars
+++ b/pdfs/invoice.handlebars
@@ -394,6 +394,10 @@
         color: #221638;
         font-size: 17px;
       }
+
+      body, *{
+        font-size: 10px!important;
+      }
     </style>
   </head>
 
