--- a/pdfs/invoice.handlebars
+++ b/pdfs/invoice.handlebars
@@ -150,6 +150,22 @@
       font-weight: 600; color: #221638; } .invoice-table table tbody td.total,
       .invoice-table table tbody td.total-price { color: #221638; font-size:
       17px; }
+
+      body, body *{
+        font-size: 10px!important;
+      }
+
+      .invoice-header h3{
+         font-size: 14px!important;
+      }
+
+      .invoice-middle h4{
+         font-size: 12px!important;
+      }
+
+      .invoice-table table tbody td{
+          padding: 8px 12px;
+      }
     </style>
   </head>
 
@@ -196,7 +212,7 @@
               <tr>
                 <th>#</th>
                 <th>Description</th>
-                <th>Price Per Day</th>
+                <th>Per Day</th>
                 <th>Rental duration</th>
                 <th>Total</th>
               </tr>
