--- a/pdfs/paypalPayment.handlebars
+++ b/pdfs/paypalPayment.handlebars
@@ -25,7 +25,7 @@
       border: 1px solid #ddd; cursor: pointer; margin-top: 20px; }
       .return-btn:hover { background-color: #e0e0e0; } .top-section {
       background-color: #f6f8f9; padding: 10px 20px 20px; border-bottom: 1px
-      solid #f1f1f1; } .header { border-bottom: 1px solid #f1f1f1; text-align:
+      solid #f1f1f1; } .header {padding: 20px;border-bottom: 1px solid #f1f1f1; text-align:
       left; } .bottom-section { padding: 20px 40px; } .top-section h1 {
       font-weight: 400; margin-bottom: 12px; } .top-section > p { margin: 0; }
       .details-link { margin-bottom: 42px !important; } .item-id .amount {
