--- a/mails/twoAuthCode.handlebars
+++ b/mails/twoAuthCode.handlebars
@@ -1,6 +1,6 @@
 {{> components/header}}
   <div class="title">
-      Code to access your account
+      Two-Factor Authentication Code
   </div>
 
   <div class="normal-text">Dear {{name}},<br/>
