--- a/mails/paymentNotification.handlebars
+++ b/mails/paymentNotification.handlebars
@@ -1,6 +1,6 @@
 {{> components/header}}
   <div class="title">
-Payment Notification
+Payment to Partners
   </div>
 
     <div class="normal-text">
