--- a/pdfs/invoice.handlebars
+++ b/pdfs/invoice.handlebars
@@ -149,23 +149,9 @@
       { border-width: 1px; } .invoice-table > .table td.text-right strong {
       font-weight: 600; color: #221638; } .invoice-table table tbody td.total,
       .invoice-table table tbody td.total-price { color: #221638; font-size:
-      17px; }
-
-      body, body *{
-        font-size: 10px!important;
-      }
-
-      .invoice-header h3{
-         font-size: 14px!important;
-      }
-
-      .invoice-middle h4{
-         font-size: 12px!important;
-      }
-
-      .invoice-table table tbody td{
-          padding: 8px 12px;
-      }
+      17px; } body, body *{ font-size: 10px!important; } .invoice-header h3{
+      font-size: 14px!important; } .invoice-middle h4{ font-size:
+      12px!important; } .invoice-table table tbody td{ padding: 8px 12px; }
     </style>
   </head>
 
@@ -221,30 +207,30 @@
               <tr>
                 <td>01</td>
                 <td>{{offer.listingName}}</td>
-                <td class="text-right">${{offer.pricePerDay}}</td>
+                <td class="text-right">{{currency}}{{offer.pricePerDay}}</td>
 
                 <td class="text-right">{{offer.durationString}}</td>
 
-                <td class="text-right">${{offer.subTotalPrice}}</td>
+                <td class="text-right">{{currency}}{{offer.subTotalPrice}}</td>
               </tr>
               <tr>
                 <td class="text-right" colspan="4">
                   <strong>Subtotal</strong>
                 </td>
-                <td class="text-right">${{offer.subTotalPrice}}</td>
+                <td class="text-right">{{currency}}{{offer.subTotalPrice}}</td>
               </tr>
               <tr>
                 <td class="text-right" colspan="4">
                   <strong>Sales Tax {{offer.fee}}%</strong>
                 </td>
-                <td class="text-right">${{offer.factTotalFee}}</td>
+                <td class="text-right">{{currency}}{{offer.factTotalFee}}</td>
               </tr>
               <tr>
                 <td class="text-right total" colspan="4">
                   <strong>Total</strong>
                 </td>
                 <td class="text-right total-price">
-                  <strong>${{offer.factTotalPrice}}</strong>
+                  <strong>{{currency}}{{offer.factTotalPrice}}</strong>
                 </td>
               </tr>
               <tr>
@@ -252,7 +238,7 @@
                   <strong>Payed</strong>
                 </td>
                 <td class="text-right total-price">
-                  <strong>${{payed}}</strong>
+                  <strong>{{currency}}{{payed}}</strong>
                 </td>
               </tr>
             </tbody>
