--- a/mails/bookingApprovalRequest.handlebars
+++ b/mails/bookingApprovalRequest.handlebars
@@ -5,7 +5,7 @@
 
     <div class="normal-text">
         You have a pending rental booking request. <br/> <br/>
-        Log in to your account to review and approve the request within X hours.
+        Log in to your account to review and approve the request.
     </div>
 
   <div class="actions">
