--- a/mails/bookingExtension.handlebars
+++ b/mails/bookingExtension.handlebars
@@ -4,7 +4,7 @@
   </div>
 
     <div class="normal-text">
-        A user has requested to extend the booking for your asset. Review and approve the request within X hours to proceed.
+        A user has requested to extend the booking for your asset. Review and approve the request to proceed.
     </div>
 
   <div class="actions">
