--- a/mails/listingVerified.handlebars
+++ b/mails/listingVerified.handlebars
@@ -3,7 +3,7 @@
       Asset Registration Approved
   </div>
 
-  <div class="normal-text">Congratulations! Your asset registration on RentAbout has been approved. <br/> <br/>
+  <div class="normal-text">Congratulations! Your asset registration on DressRenter has been approved. <br/> <br/>
        Your asset {{name}} is now live on our platform.</div>
 
   <div class="actions">
