--- a/pdfs/invoice.handlebars
+++ b/pdfs/invoice.handlebars
@@ -161,7 +161,7 @@
         <div class="invoice-header">
           <div class="invoice-left-text">
             <h3>Indice Admin</h3>
-            <p>RentAbout</p>
+            <p>DressRenter</p>
           </div>
           <div class="invoice-right-text">
             <h3>Invoice</h3>
